[package]
name = "pstr"
version = "0.5.0"
authors = ["2A5F <u2a5f@outlook.com>"]
edition = "2018"
description = "Global String Intern Pool"
repository = "https://github.com/volight/pstr"
license = "MIT"
readme = "README.md"
keywords = ["intern", "string", "pool", "interning", "interned"]
categories = ["rust-patterns", "caching", "data-structures"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
once_cell = "1.4"
dashmap = "3.11"